--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -1,6 +1,7 @@
 :root{/* Criando variaveis glogais*/
     --primary-color:#0A1128;
     --white-color: #fff;
+    --light-gray-color: #EEEEEE;
     --gap: 3rem;
 }
 
@@ -27,7 +28,7 @@ body{
 }
 
 h1, h2, h3, h4, h5, h6{
-    font-family:'Montserrat', sans-serif; ;
+    font-family:'Montserrat', sans-serif;
 }
 
 h1{
@@ -59,6 +60,10 @@ h6{
     font-size: 3.5rem;
 }
 
+a {
+    text-decoration:none;
+}
+
 .main-bg{
     background-image: url('../img/main-bg.svg');
     background-size: cover;
@@ -71,11 +76,71 @@ h6{
 }
 
 .main-content{
-    max-width: 1200px; /*1200 pixel da largura do site*/
+    max-width: 1200px;
+     /*1200 pixel da largura do site*/
     margin: 0 auto;
     padding: var(--gap);
 }
 
 .section {
     min-height: 100vh;
+     /*altura minima da seção 920px ou 100vh*/
+}
+
+.menu{
+    background: var(--white-color);
+    position: fixed; 
+    /* ao mover a pagina o menu acompanhará graças ao fixed*/
+    top:0;
+    left:0;
+    right: 0;
+    width: 100%;  
+    border-bottom: 1px solid var(--light-gray-color); 
+}
+ .menu-content{
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     padding-top: 0;
+     padding-bottom: 0;
+ }
+
+ .menu h1{
+     font-size: 2.3rem;
+     color: var(--primary-color)
+ }
+
+ .menu h1 a{
+    color: inherit; /* esse função fará que pegue as caracterisca do seu pai*/
+ }
+
+ .menu ul{
+     list-style: none;
+     display: flex;
+ }
+
+ .menu ul li a{
+    display: block;
+    padding: 2rem;
+    font-size: 1.8rem;
+    color: var(--primary-color);
+    position: relative;
+}
+
+.menu ul li a::after{
+    content: '';
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    width: 0%;
+    height: 0.2rem;
+    background: crimson;
+    transition: all 300ms ease-in-out;/*efeito de trasição*/
+
+    /*border-bottom: 0.2rem solid crimson;opção para bordas*/
+}
+
+.menu ul li a:hover::after{
+    width: 50%;
+    left: 25%;
 }
