--- a/assest/css/elements.css
+++ b/assest/css/elements.css
@@ -16,8 +16,9 @@ font-family: 'Open Sans', sans-serif;
 body{
     font-family:'Open Sans', sans-serif;
     font-size: 2rem;
-    color: var(--primary-color) 
+    color: var(--primary-color);
     /*para ativar o Root vc coloca "var(--sua variante)*/
+    line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6{
