--- a/assest/css/classes.css
+++ b/assest/css/classes.css
@@ -1,7 +1,7 @@
 .main-bg{
     background-image: url('../img/main-bg.svg');
-    background-size: cover;
-    background-position: center center;
+    background-position: center;
+    background-size:cover;
     color: var(--white-color)
 }
 
