--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -1,169 +1,191 @@
-.intro-content{
-    position: relative;
-    /*top: -8rem;*/
-    display: grid;
-    grid-template-columns: 1fr 1.5fr;
-    gap: var (--gap);
-    min-height: 100vh;
+.intro-content {
+  position: relative;
+  /*top: -8rem;*/
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  gap: var (--gap);
+  min-height: 100vh;
 }
 
-.intro-text-content, .intro-img{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
+.intro-text-content,
+.intro-img {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
 }
 
-.intro-img img{
-    /*ajustamdo o img na tela*/
-    max-width: 100%;
-    height: 100%;
-    margin-bottom: 8.0rem;
-    margin-left: 10rem;
+.intro-img img {
+  /*ajustamdo o img na tela*/
+  max-width: 100%;
+  height: 100%;
+  margin-bottom: 8rem;
+  margin-left: 10rem;
 }
 
-.top3-content{
-    max-width: 64rem;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    height: 100vh;
-    text-align: center;
+.top3-content {
+  max-width: 64rem;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  min-height: 100vh;
+  text-align: center;
 }
 
-.grid-one-content{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    min-height: 100vh;
+.grid-one-content {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  min-height: 100vh;
 }
 
-.grid-main-heading{
-    margin-bottom: 1rem;
+.grid-main-heading {
+  margin-bottom: 1rem;
 }
 
-.grid-description{
-    padding-bottom: 5rem;
+.grid-description {
+  padding-bottom: 5rem;
 }
 
-.grid{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: var(--gap);
-    counter-reset: grid-counter; /*colocando um contador na grid*/
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: var(--gap);
+  counter-reset: grid-counter; /*colocando um contador na grid*/
 }
 
-.grid h3{
-    font-size: 3rem;
-    position: relative;
-    padding-left:  5rem;
-    padding-bottom: 3rem;
+.grid h3 {
+  font-size: 3rem;
+  position: relative;
+  padding-left: 5rem;
+  padding-bottom: 3rem;
 }
 
 .grid h3::before {
-    /*configurando o contador*/
-    counter-increment: grid-counter;
-    content: counter('grid-counter'); 
-    position: absolute;
-    font-size: 8rem;
-    font-style: italic;
-    top: -3rem;
-    left: -1.5rem;
-    transform: rotate(5deg);
-     /*para rodar algum elemento*/
+  /*configurando o contador*/
+  counter-increment: grid-counter;
+  content: counter("grid-counter");
+  position: absolute;
+  font-size: 8rem;
+  font-style: italic;
+  top: -3rem;
+  left: -1.5rem;
+  transform: rotate(5deg);
+  /*para rodar algum elemento*/
 }
 
-.gallery-img{
-    width: 100%;
-    max-width: 36rem;
-    max-height: 36rem;
-    overflow: hidden;
+.gallery-img {
+  width: 100%;
+  max-width: 36rem;
+  max-height: 36rem;
+  overflow: hidden;
 }
 
-.gallery-img img{
-    transition: all 300ms ease-in-out;
+.gallery-img img {
+  transition: all 300ms ease-in-out;
 }
 
-.gallery-img img:hover{
-    transform: translate(-3%, 3%) scale(1.2)  rotate(5deg);
+.gallery-img img:hover {
+  transform: translate(-3%, 3%) scale(1.2) rotate(5deg);
 }
 
-.contact-form{
-    grid-column: span 2;
+.contact-form {
+  grid-column: span 2;
 }
 
-.contact-form .form-grid{
-    border: none;
-    display: flex;
-    flex-direction: row;
-    flex-wrap:wrap;
-    gap: var(--gap);
+.contact-form .form-grid {
+  border: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: var(--gap);
 }
 
-.form-grid legend{
-    font-style: italic;
-    font-size: 1.6rem;
-    margin-bottom: 3rem;
-
+.form-grid legend {
+  font-style: italic;
+  font-size: 1.6rem;
+  margin-bottom: 3rem;
 }
 
-.form-group{
-    flex: 1 1 320px;
+.form-group {
+  flex: 1 1 320px;
 }
 
-.form-group label{
-    display:block;
-    margin-bottom: 1rem;
+.form-group label {
+  display: block;
+  margin-bottom: 1rem;
 }
 
 .form-group input,
 .form-group textarea {
-    border: none;
-    background-color: var(--white-color);
-    padding: 1.5rem 2rem;
-    width: 100%;
-    font-size: 3rem;
-    outline: none;
+  border: none;
+  background-color: var(--white-color);
+  padding: 1.5rem 2rem;
+  width: 100%;
+  font-size: 3rem;
+  outline: none;
 }
 
 .form-group input:focus,
 .form-group textarea:focus {
-    box-shadow: 0 0 5px 2px var(--white-color)
+  box-shadow: 0 0 5px 2px var(--white-color);
 }
 
-.form-group button{
-    border: 0.5rem solid var(--white-color);
-    background: none;
-    color: var(--white-color);
-    padding: 1.5rem 2rem;
-    font-size: 3rem;
-    cursor: pointer;
-    transition: all 300ms ease-in-out;
+.form-group button {
+  border: 0.5rem solid var(--white-color);
+  background: none;
+  color: var(--white-color);
+  padding: 1.5rem 2rem;
+  font-size: 3rem;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
 }
 
-.form-group button:hover{
-    background: var(--white-color);
-    color: var(--primary-color);
+.form-group button:hover {
+  background: var(--white-color);
+  color: var(--primary-color);
 }
 
-.form-group ::placeholder{
-    color: #b1abab
+.form-group ::placeholder {
+  color: #b1abab;
 }
 
 .footer {
-    text-align: center;
-    font-size: 1.6rem;
-
+  text-align: center;
+  font-size: 1.6rem;
 }
 
 .footer a {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
-.heart{
-    color: var(--secondary-color);
+.heart {
+  color: var(--secondary-color);
 }
 
-.footer p{
-    margin: 0;
-    padding: 3rem;
+.footer p {
+  margin: 0;
+  padding: 3rem;
 }
+
+@media (max-width: 800px) {
+  .intro-content,
+  .grid {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery-img {
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .gallery-img img {
+    width: 100%;
+}
+
+.grid-one-content{
+    display: block;
+}
+
+}
+
