--- a/assest/css/menu.css
+++ b/assest/css/menu.css
@@ -43,7 +43,7 @@
     position: absolute;
     bottom: 1rem;
     left: 50%;
-    width: 0%;
+    width: 0;
     height: 0.2rem;
     background: var(--secondary-color);
     transition: all 300ms ease-in-out;
